2013-09-04  Rasmus Pank Roulund  <emacs@pank.eu>

	* gnus-fun.el (gnus-x-face-omit-files): Regexp to omit matched results
	from random face commands.
	(gnus-face-directory): Like `gnus-x-face-directory` for png files and
	Face.
	(gnus-face-omit-files): Like `gnus-x-face-omit-files` for Face.
	(gnus--random-face-with-type): Generic function returning a face-type
	as a string.
	(gnus--insert-random-face-with-type): Generic function inserting a face
	in a message buffer header.
	(gnus-random-x-face): Rewritten to use `gnus--random-face-with-type`.
	(gnus-insert-random-x-face-header): Rewritten to use
	`gnus--insert-random-face-with-type`.
	(gnus-random-face): Return random (png) Face as string.
	(nus-insert-random-face-header): Insert random (png) Face in a message
	buffer.

2014-01-31  Lars Ingebrigtsen  <larsi@gnus.org>

	* mm-url.el: Remove all usage of w3.

	* nnrss.el: Ditto.

	* mm-decode.el: Ditto.

	* mm-view.el: Ditto.

	* dgnushack.el: Remove mentions of urldir and w3-dir, since w3 is
	outdated and all Emacsen have url.el built-in.

	* gnus-setup.el: Remove outdated file.

2014-01-31  Lars Magne Ingebrigtsen  <lars@ingebrigtsen.no>

	* gnus.el: Ma Gnus v0.9 is released.

2014-01-31  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-transform-headers): Fix Davmail header parsing.

2014-01-31  Dave Abrahams  <dave@boostpro.com>

	* gnus-salt.el (gnus-tree-highlight-article): Don't move point around
	in the summary buffer (bug#13769).

2014-01-31  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (gnus-article-setup-buffer): Refresh the summary buffer
	name if we're using a single article buffer.  Otherwise, it may point
	to a killed buffer (bug#13756).

2014-01-30  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnmail.el (nnmail-split-it): Instead of redoing the search to restore
	the match data, just save and restore it explictly (bug#12375).

	* gnus-sum.el (gnus-summary-read-group-1): Initialize the spam code if
	that's needed.
